<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_in_header"
        android:textColor="#9b59b6"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginVertical="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_e_mail_label"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/textfield"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/enter_password_label"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="@drawable/textfield"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/button_background"
        android:paddingStart="30dp"
        android:paddingTop="8dp"
        android:paddingEnd="30dp"
        android:paddingBottom="8dp"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/or_desc"
        android:src="@drawable/or" />

    <ImageView
        android:id="@+id/google_login"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="120dp"
        android:contentDescription="@string/google_log_desc"
        android:src="@drawable/googlog"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/sign_up_page"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="20dp"
        android:textSize="16sp"
        android:contentDescription="@string/sign_up_desc"
        android:background="@drawable/newuser" />
</LinearLayout>